Added 3rd tutorial fragment and implemented 2nd tutorial fragment buttons. Also cleaned up code in a few classes.

--- a/SmartConvert/app/src/main/res/values/strings.xml
+++ b/SmartConvert/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="verification_code_string">Verification Code:</string>
     <string name="enter_string">Enter</string>
     <string name="welcome_string">Welcome to \nSmart Convert</string>
+    <string name="american_curr_string">American</string>
+    <string name="euro_curr_string">Euro</string>
 </resources>
