--- a/SmartConvert/app/src/main/res/values/strings.xml
+++ b/SmartConvert/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="welcome_string">Welcome to \nSmart Convert</string>
     <string name="american_curr_string">American</string>
     <string name="euro_curr_string">Euro</string>
+    <string name="description_string">Smart Convert is an app that will convert currencies at the current rate. Location can be used to determine user\'s local currency.</string>
+    <string name="convert_string">Convert</string>
+    <string name="example_amount_1_string">5.00</string>
+    <string name="example_amount_2_string">4.31</string>
 </resources>
