--- a/SmartConvert/app/src/main/res/values/strings.xml
+++ b/SmartConvert/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="convert_string">Convert</string>
     <string name="example_amount_1_string">5.00</string>
     <string name="example_amount_2_string">4.31</string>
+    <string name="curr_location_string">Current Location</string>
 </resources>
