Convert Fragment added, convert button not yet implemented and spinner don't have values yet

--- a/SmartConvert/app/src/main/res/values/strings.xml
+++ b/SmartConvert/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="example_amount_1_string">5.00</string>
     <string name="example_amount_2_string">4.31</string>
     <string name="curr_location_string">Current Location</string>
+    <string name="def_location_string">Default Location</string>
+
 </resources>
