task for currency conversion created
Only converts 50 USD to Euro right now using the api but should not be too bad to convert other currencies using the info passed in

--- a/SmartConvert/app/src/main/res/values/strings.xml
+++ b/SmartConvert/app/src/main/res/values/strings.xml
@@ -32,5 +32,8 @@
     <string name="example_amount_2_string">4.31</string>
     <string name="curr_location_string">Current Location</string>
     <string name="def_location_string">Default Location</string>
+    <string name="Currency1">USD</string>
+    <string name="Currency2">Euro</string>
+    <string name="Value1">50</string>
 
 </resources>
