--- a/SmartConvert/app/src/main/res/values/strings.xml
+++ b/SmartConvert/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="Currency2">Euro</string>
     <string name="Value1">50</string>
 
+    <string name="email_key">key</string>
+
 </resources>
