--- a/SmartConvert/app/src/main/res/values/strings.xml
+++ b/SmartConvert/app/src/main/res/values/strings.xml
@@ -47,5 +47,7 @@
     <string name="end_tutorial_third_string">Press the convert button to see the results!</string>
     <string name="end_tutorial_fourth_string">Current location will be used if locations is allowed when it pops up.</string>
     <string name="end_tutorial_fifth_string">Enjoy!</string>
+    <string name="location_key">location_key</string>
+    <string name="prefs">prefs</string>
 
 </resources>
