URL on convertFragment not working and editPrefs isnt updating the new CountryCode

--- a/SmartConvert/app/src/main/res/values/strings.xml
+++ b/SmartConvert/app/src/main/res/values/strings.xml
@@ -56,5 +56,7 @@
     <string name="prefs">prefs</string>
     <string name="currency_key">currency_key</string>
     <string name="profile_navText">Profile</string>
+    <string name="settingsString">Settings</string>
+    <string name="locationCode_key">locationCode</string>
 
 </resources>
