--- a/SmartConvert/app/src/main/res/values/strings.xml
+++ b/SmartConvert/app/src/main/res/values/strings.xml
@@ -58,5 +58,9 @@
     <string name="profile_navText">Profile</string>
     <string name="settingsString">Settings</string>
     <string name="locationCode_key">locationCode</string>
+    <string name="history_Text">History</string>
+    <string name="logoutText">Log out</string>
+    <string name="exitText">Exit</string>
+    <string name="saveText">Save</string>
 
 </resources>
