--- a/SmartConvert/app/src/main/res/values/strings.xml
+++ b/SmartConvert/app/src/main/res/values/strings.xml
@@ -67,5 +67,6 @@
     <string name="alert_boo">alert_boo</string>
     <string name="no_country_string">No Country</string>
     <string name="alert_done_boo">alert_done_boo</string>
+    <string name="end_string">End</string>
 
 </resources>
