added home navigation and logout navigation

--- a/SmartConvert/app/src/main/res/values/strings.xml
+++ b/SmartConvert/app/src/main/res/values/strings.xml
@@ -72,5 +72,6 @@
     <string name="end_string">End</string>
     <string name="lat_key">lat</string>
     <string name="long_key">long</string>
+    <string name="home_Text">Home</string>
 
 </resources>
